# ingemark-message-service-

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: develop.yml  main.yml  test.yml
alembic/: env.py
alembic/versions/: 001_create_messages_table.py
app/: main.py
app/core/: auth.py  config.py  database.py  exception_handlers.py  exceptions.py  logger.py  middleware.py
app/health/: router.py
app/messages/: model.py  repository.py  responses.py  router.py  service.py
app/messages/dto/: __init__.py  base.py  create_message.py  update_message.py
app/messages/interfaces/: message_repository.py
tests/: conftest.py  test_health.py
tests/messages/: test_create.py  test_get.py  test_messages.py  test_update.py
